# mitos

./: .gitignore  CLAUDE.md  COMPLETED.md  MANIFEST.in  README.md  SETUP.md  decisions.md  docker-compose.yml  format-spec.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
decisions/archive/: 2026-Q2.md
mitos/: __init__.py  __main__.py  _agent_block.py  _update.py  check.py  cli.py  config.py  conflict.py  conflict_judgment.py  cutover.py  display.py  embeddings.py  errors.py  format-spec.md  identity.py  importer.py  lexical.py  mcp_server.py  migrations.py  models.py  parser.py  protocols.py  recall.py  renderer.py  replay.py  store.py  sync.py  telemetry.py  vector_store.py
tests/: _conflict_helpers.py  conftest.py  live_helpers.py  test_adversarial_importer.py  test_adversarial_invariants.py  test_adversarial_mcp.py  test_adversarial_rendering.py  test_agent_block.py  test_check_cli.py  test_check_engine.py  test_check_hardening.py  test_check_hook_recipe.py  test_check_probe.py  test_check_screen.py  test_check_staged.py  test_check_sweep.py  test_cli.py  test_cli_additions.py  test_cli_pathologies.py  test_config.py  test_conflict_closeout.py  test_conflict_constants.py  test_conflict_dogfood_live.py  test_conflict_facade.py  test_conflict_faults.py  test_conflict_gather.py  test_conflict_judgment.py  test_conflict_judgment_executor.py  test_conflict_modifier_surfacing.py  test_conflict_screen.py  test_conflict_sync.py  test_corpus_provenance.py  test_cutover.py  test_directory_global.py  test_display_emitters.py  test_display_encoding.py  test_doc_reconciliation.py  test_dogfood_self_parse.py  test_edge_catalog.py  test_embeddings.py  (+41 more)
tests/fixtures/: conflict_prompt_system.txt  conflict_prompt_user.txt
tests/golden/: CONFLICT_PROMPT_FIT.md  LAYER_B_FINDINGS.md  _conflict_harness.py  _harness.py  _semantic_harness.py  baseline.metrics.json  conflict.baseline.metrics.json  decisions.reference.md  metrics.py  oracle.reference.json  oracle.semantic.json  questions.reference.md  test_conflict_eval_live.py  test_golden_reference.py  test_metrics.py  test_retrieval_live.py
